--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,10 +17,11 @@ junit = "4.13.2"
 kotlin = "2.0.21"
 kotlinx-coroutines = "1.9.0"
 kotlin-serialization = "1.7.3"
-ktor = "3.0.0"
+ktor = "2.3.12"
 room = "2.7.0-alpha11" # https://developer.android.com/jetpack/androidx/releases/room#declaring_dependencies
 koin = "3.5.6" # https://github.com/InsertKoinIO/koin/releases
 slf4j = "2.0.16"
+log4j-core = "2.20.0"
 sqlite = "2.5.0-alpha11"
 
 [libraries]
@@ -44,6 +45,8 @@ kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializat
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-websocket = { module = "io.ktor:ktor-client-websockets", version.ref = "ktor" }
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 #ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" } # ios
 settings = { module = "com.russhwolf:multiplatform-settings", version = "1.2.0" }
 # room
@@ -54,9 +57,13 @@ room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 nav = { module = "org.jetbrains.androidx.navigation:navigation-compose", version = "2.8.0-alpha10" }
 m3 = { module = "androidx.compose.material3:material3", version = "1.3.1" }
 m3-icon = { module = "androidx.compose.material:material-icons-extended", version = "1.7.5" }
-# slf4j
+# log
 slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "slf4j" }
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
+logback-android = { module = "com.github.tony19:logback-android", version = "3.0.0" }
+logback-classic = { module = "ch.qos.logback:logback-classic", version = "1.5.7" }
+log4j-core = { module = "org.apache.logging.log4j:log4j-core", version.ref = "log4j-core" }
+log4j-slf4j-impl = { module = "org.apache.logging.log4j:log4j-slf4j2-impl", version.ref = "log4j-core" }
 # sqlite
 sqlite = { module = "androidx.sqlite:sqlite", version.ref = "sqlite" }
 sqlite-bundled = { module = "androidx.sqlite:sqlite-bundled", version.ref = "sqlite" }
