--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,8 @@ koin = "3.5.6" # https://github.com/InsertKoinIO/koin/releases
 slf4j = "2.0.16"
 log4j-core = "2.20.0"
 sqlite = "2.5.0-alpha11"
+sshd = "2.10.0"
+material3Android = "1.3.1"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -74,6 +76,10 @@ koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-test = { module = "io.insert-koin:koin-test", version.ref = "koin" }
 
 androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "jetpack-compose" }
+sshd-core = { module = "org.apache.sshd:sshd-core", version.ref = "sshd" }
+sshd-common = { module = "org.apache.sshd:sshd-common", version.ref = "sshd" }
+sshd-putty = { module = "org.apache.sshd:sshd-putty", version.ref = "sshd" }
+jmx = { module = "javax.management:jmx", version = "1.2.1" }
 
 
 [plugins]
