--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,7 @@ sqlite = "2.5.0-alpha11"
 sshd = "2.10.0"
 material3Android = "1.3.1"
 mywol = "1.0.0"
+documentfile = "1.0.1"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -81,6 +82,7 @@ sshd-core = { module = "org.apache.sshd:sshd-core", version.ref = "sshd" }
 sshd-common = { module = "org.apache.sshd:sshd-common", version.ref = "sshd" }
 sshd-putty = { module = "org.apache.sshd:sshd-putty", version.ref = "sshd" }
 jmx = { module = "javax.management:jmx", version = "1.2.1" }
+androidx-documentfile = { group = "androidx.documentfile", name = "documentfile", version.ref = "documentfile" }
 
 
 [plugins]
