--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,8 +25,9 @@ log4j-core = "2.20.0"
 sqlite = "2.5.0-alpha11"
 sshd = "2.10.0"
 material3Android = "1.3.1"
-mywol = "1.1.2"
+mywol = "1.2.0"
 documentfile = "1.0.1"
+cronUtils = "9.2.1"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -82,7 +83,8 @@ sshd-core = { module = "org.apache.sshd:sshd-core", version.ref = "sshd" }
 sshd-common = { module = "org.apache.sshd:sshd-common", version.ref = "sshd" }
 sshd-putty = { module = "org.apache.sshd:sshd-putty", version.ref = "sshd" }
 jmx = { module = "javax.management:jmx", version = "1.2.1" }
-androidx-documentfile = { group = "androidx.documentfile", name = "documentfile", version.ref = "documentfile" }
+androidx-documentfile = { module = "androidx.documentfile:documentfile", version.ref = "documentfile" }
+cron-utils = { module = "com.cronutils:cron-utils", version.ref = "cronUtils" }
 
 
 [plugins]
